--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-ctn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(103, 34, 128, 1);
+    padding: 25px;
+}
+
+.nav-name {
+    display: flex;
+    align-items: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: rgb(0, 217, 255);
+}
+
+.nav-par>ul>li {
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+}
+
+.nav-logo {
+    width: 60px;
+    object-fit: cover;
+}
+
+.header {
+    padding: 40px 30px 20px 20px;
+    text-align: left;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white
+}
+
+.main-reasons {
+    padding: 30px 0px 0px 60px;
+    list-style: square;
+}
+
+.mid {
+    padding: 90px 30px 0px 30px;
+}
+
+.mid .form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.mid input {
+    border-radius: 10px;
+    border: gray 1px solid;
+    width: 49%;
+    height: 50px;
+    font-family: 'Karla'sans-serif;
+    font-style: normal;
+    font-size: 22px;
+    line-height: 22px;
+}
+
+.footer {
+    background-color: gray;
+    text-align: center;
+    width: 100vw;
+    height: 40px;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: auto;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.mid--submit {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+
+.mid--submit button {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    background-color: rgba(103, 34, 128, 1);
+    color: white;
+    border: none;
+    font-family: 'Karla' sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    cursor: pointer;
+}
+.mid--submit button:active{
+    background-color: rgb(53, 21, 65);
+    transition: 50ms linear;
+    
+}
+
+.lock{
+    display: flex;
+    justify-content: center;
+    position:relative;
+}
+.pic1{
+    height: 320px;
+    margin-top: 50px;
+    
+}
+.finput2{
+    position: absolute;
+    top:50%;
+    left:50%;
+}
+.secInput2{
+    position: absolute;
+    top:93%;
 }
